src/components/Graphs/Table/style.css
.pointer {
    cursor: pointer !important;
    text-decoration: none;
}

.text-white {
    color: #fcfcfc;
}

.text-white:hover {
    font-weight: bold;
    color: #fcfcfc;
    cursor:  copy;
}

table tbody tr:hover {
    background-color: #f2f2f2;
    cursor: pointer;
}

table th > div:nth-child(2) {
    margin-left: 1px !important;
    margin-right: 0px !important;
    height: 12px !important;
    width: 12px !important;
}

